6-15-2025
- rewrite screenshot scripts for TWM desktops
- set XDG_SCREENSHOTS_DIR to ~/Pictures/screenshots via default home-manager profile
- Add control + Printscreen keybind to wayland for taking a screenshot of the current active window
- use grimblast for hyprland
- Fix a bug where slurp would run multiple times if the screenshot key was pressed while actively taking a screenshot


6-09-2025
- make gdm the default display manager when the gnome nixOS module is enabled.


6-08-2025
- add fish
- move shell-aliases to shared modules


6-06-2025
- fix tmux sourcing issue with the dracula theme plugin
- install old HP laptop
- add openboardviewer to programs
- add disko modules to templates
- sops module now properly defaults sops.age.keyFile so it can be changed by other flakes


6-02-2025
- move nixos-update to shellScriptBin instead of a shellAlias for zsh


6-01-2025
- replace catpucchin tmux with dracula tmux
- add CPU RAM and battery modules to tmux
- removed old waybar themes
- prevent stylix from adding unnecessary css to waybar
- set environment variable NH_NO_CHECKS=1 as a temporary solution to "please enable nix-command and flakes" even if it is enabled
- update flake to linux 6.15
- resolved issues with nautilus and gvfs as a result of the flake update
- added dolphin as a filemanager option to nixos and HM through programs.dolphin.enable
- replace services.lact for the one in nixpkgs


5-28-2025
- add swayidle and hypridle
- swayidle is not compatable with hyprland
- hypridle is not compatable with sway
- each desktop will stop the other idle service if enabled at the same time
- add basic abstraction layers for each service for easily programmable idle times
- fix dpms on bug for multi-monitor setup in sway # https://github.com/swaywm/sway/issues/5101
- swww reloads again on both sway and hyprland reload - name of service changed
- utilize symlinkJoin instead of programs.zsh.shellAliases for both neovim vi and vim aliases